src/objects/Committee_new__c.object
<CustomObject>
    <fields>
        <fullName>Chairperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chairperson</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Committees</relationshipLabel>
        <relationshipName>Committees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committee_Objectives__c</fullName>
        <label>Committee Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Meetings__c</fullName>
        <label>Frequency of Meetings</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Committee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>